--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h1>把点子变成产品的行动型学习者</h1>
           <p class="lead">
             这是我在 Way2AGI 学习 Vibe Coding 后的毕业名片。
-            目标是在最短时间内完成“痛点洞察 → MVP → 真实验证”，并把学习过程沉淀为可复用的路径。
+            目标是在最短时间内完成“痛点洞察 → PRD → 原型验证”，并把学习过程沉淀为可复用的路径。
           </p>
           <div class="hero-actions">
             <a class="btn primary" href="#pitch">查看项目路演</a>
@@ -49,23 +49,23 @@
           </div>
           <div class="stats">
             <div>
-              <span class="num">3天</span>
-              <span class="label">完成 MVD</span>
+              <span class="num">3份</span>
+              <span class="label">作业沉淀</span>
             </div>
             <div>
-              <span class="num">1页</span>
-              <span class="label">MVP 看板</span>
+              <span class="num">2个</span>
+              <span class="label">产品方向</span>
             </div>
             <div>
-              <span class="num">5位</span>
-              <span class="label">真实访谈</span>
+              <span class="num">1个</span>
+              <span class="label">可用原型</span>
             </div>
           </div>
         </div>
         <div class="hero-card">
           <div class="card-top">
             <span class="pill">痛点洞察</span>
-            <span class="pill">MVP</span>
+            <span class="pill">PRD</span>
             <span class="pill">快速验证</span>
           </div>
           <div class="card-body">
@@ -85,47 +85,52 @@
       <section id="pitch" class="section pitch">
         <div class="section-title">
           <h2>项目路演</h2>
-          <p>从痛点场景到 MVP 的全链路思考</p>
+          <p>从痛点挖掘到 PRD 与原型的整合呈现</p>
         </div>
         <div class="card-grid">
           <article class="card">
-            <div class="card-kicker">痛点场景</div>
-            <h3>学习型社群的协作与信息碎片化</h3>
-            <p>
-              在社群学习中，任务、资源、进度散落在群消息、文档与表格里，
-              组织者需要频繁整理，成员也难以快速看到“现在最重要的 3 件事”。
-            </p>
-          </article>
-          <article class="card">
-            <div class="card-kicker">MVP 产品</div>
-            <h3>VibeBoard · 一页式学习路演看板</h3>
-            <p>
-              目标是把“当前目标、行动列表、资源入口、进度节奏”放在一页内，
-              让新人 30 秒内理解学习进度与参与方式。
-            </p>
+            <div class="card-kicker">作业一 · 痛点挖掘机</div>
+            <h3>三类高频、低效且反复出现的场景</h3>
             <ul>
-              <li>一个页面包含目标、任务、里程碑</li>
-              <li>内置提问区与反馈入口</li>
-              <li>一键复用为下期学习营</li>
+              <li>家长辅导 10 以内加减法：题库死板、难度难调、错题需手动标注</li>
+              <li>摄影选片：连拍产生大量相似照片，筛选成本极高</li>
+              <li>办公室久坐：健康受损与工作效率难以平衡</li>
             </ul>
           </article>
           <article class="card">
-            <div class="card-kicker">验证方式</div>
-            <h3>3 天完成 MVD 并邀请 5 位真实用户试用</h3>
+            <div class="card-kicker">作业二 · PRD 文档</div>
+            <h3>智能摄影选片工具 V1.0</h3>
             <p>
-              通过低成本访谈与可点击原型，确认“可视化进度”是最大价值点，
-              并收集到下一步需要加入“提醒与打卡”的需求。
+              目标用户是职业人像摄影师与婚礼摄影师（每周 2-5 场拍摄、每场 500-1500 张）。
+              关键问题不是缺少工具，而是技术性筛选与审美判断混在一起，创作者被迫做机械劳动。
             </p>
+            <ul>
+              <li>先自动剔除废片，只留下值得纠结的候选</li>
+              <li>每场节省 2-3 小时选片时间，降低决策疲劳</li>
+              <li>时间直接转化为更多接单或更好的生活质量</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="card-kicker">作业三 · 产品原型</div>
+            <h3>在线证件照生成</h3>
+            <p>
+              面向求职与考试人群：不想预约、不想跑照相馆，只希望用手机自拍快速获得专业证件照。
+              该流程把“耗时、耗钱、来回跑”变成“几分钟完成”。
+            </p>
+            <ul>
+              <li>上传照片，选择性别与服装风格</li>
+              <li>支持领带与风格提示词</li>
+              <li>一键生成并下载证件照</li>
+            </ul>
           </article>
         </div>
         <div class="process">
           <h3>从点子到产品的挖掘思路</h3>
           <ul class="steps">
-            <li>观察高频阻塞，记录 7 天内反复出现的问题</li>
-            <li>用 3 句话写清用户、场景、代价</li>
-            <li>画出最低可行流程图，锁定 1 个核心动作</li>
-            <li>以一周为周期做 MVD，只交付可演示成果</li>
-            <li>用 5 个真实用户验证，形成下一轮迭代清单</li>
+            <li>记录一周内反复出现的低效场景</li>
+            <li>拆分“机械性处理”与“审美判断”两个维度</li>
+            <li>聚焦最小可演示价值，先做可运行原型</li>
+            <li>用真实用户反馈形成下一轮迭代清单</li>
           </ul>
         </div>
       </section>
@@ -149,8 +154,8 @@
             <h3>给伙伴的 AI 学习路径</h3>
             <ul>
               <li>第 1 天：用 AI 完成 1 页式作品集或名片</li>
-              <li>第 2 天：围绕一个痛点做 1 个可演示原型</li>
-              <li>第 3 天：做用户访谈与反馈整理，产出迭代清单</li>
+              <li>第 2 天：围绕一个痛点做 1 个 PRD 文档</li>
+              <li>第 3 天：做一个可交互原型并收集反馈</li>
               <li>第 4 天：把流程沉淀为模板，提升复用效率</li>
             </ul>
           </article>
