Polish copy across sections

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       <section class="hero" id="top">
         <div class="hero-text">
           <p class="eyebrow">Vibe Coding · 课程毕业名片</p>
-          <h1>把点子变成产品的行动型学习者</h1>
+          <h1>把痛点变成可验证产品</h1>
           <p class="lead">
-            这是我在 Way2AGI 学习 Vibe Coding 后的毕业名片。
-            目标是在最短时间内完成“痛点洞察 → PRD → 原型验证”，并把学习过程沉淀为可复用的路径。
+            我在 Way2AGI 的学习目标是：用产品经理思维发现高频痛点，
+            形成清晰 PRD，并在最短时间内完成可用原型。
+            本名片记录了我的痛点挖掘、PRD 与原型成果。
           </p>
           <div class="hero-actions">
             <a class="btn primary" href="#pitch">查看项目路演</a>
@@ -49,31 +50,31 @@
           </div>
           <div class="stats">
             <div>
-              <span class="num">3份</span>
-              <span class="label">作业沉淀</span>
+              <span class="num">2-5 场</span>
+              <span class="label">周拍摄频率</span>
             </div>
             <div>
-              <span class="num">2个</span>
-              <span class="label">产品方向</span>
+              <span class="num">500-1500</span>
+              <span class="label">单场照片规模</span>
             </div>
             <div>
-              <span class="num">1个</span>
-              <span class="label">可用原型</span>
+              <span class="num">2-3 小时</span>
+              <span class="label">每场可省时间</span>
             </div>
           </div>
         </div>
         <div class="hero-card">
           <div class="card-top">
             <span class="pill">痛点洞察</span>
-            <span class="pill">PRD</span>
-            <span class="pill">快速验证</span>
+            <span class="pill">PRD 输出</span>
+            <span class="pill">原型验证</span>
           </div>
           <div class="card-body">
             <h3>毕业名片关键词</h3>
             <ul>
-              <li>聚焦真实场景，先写清用户与代价</li>
-              <li>以最小可演示为目标，不追求完美</li>
-              <li>用 AI 加速研究、产出与迭代</li>
+              <li>只解决“必须做且反复发生”的问题</li>
+              <li>将机械性筛选交给机器，审美判断留给人</li>
+              <li>以可演示为目标，持续快速迭代</li>
             </ul>
           </div>
           <div class="card-footer">
@@ -102,12 +103,13 @@
             <h3>智能摄影选片工具 V1.0</h3>
             <p>
               目标用户是职业人像摄影师与婚礼摄影师（每周 2-5 场拍摄、每场 500-1500 张）。
-              关键问题不是缺少工具，而是技术性筛选与审美判断混在一起，创作者被迫做机械劳动。
+              他们面临“连拍产生大量相似照片 + 必须逐张人工筛选 + 反复对比害怕漏选”的低效流程。
+              这不是缺少工具，而是技术性筛选与审美判断混在一起，创作者被迫用脑力做机器该做的体力活。
             </p>
             <ul>
-              <li>先自动剔除废片，只留下值得纠结的候选</li>
-              <li>每场节省 2-3 小时选片时间，降低决策疲劳</li>
-              <li>时间直接转化为更多接单或更好的生活质量</li>
+              <li>自动扔掉不用看的废片，只留下值得纠结的候选</li>
+              <li>每场节省 2-3 小时，避免“200 次微决策”的疲劳</li>
+              <li>省下的时间直接转化为多接一单或准时下班</li>
             </ul>
           </article>
           <article class="card">
@@ -119,7 +121,7 @@
             </p>
             <ul>
               <li>上传照片，选择性别与服装风格</li>
-              <li>支持领带与风格提示词</li>
+              <li>支持领带选项与风格提示词</li>
               <li>一键生成并下载证件照</li>
             </ul>
           </article>
@@ -127,7 +129,7 @@
         <div class="process">
           <h3>从点子到产品的挖掘思路</h3>
           <ul class="steps">
-            <li>记录一周内反复出现的低效场景</li>
+            <li>记录一周内反复出现的低效场景，并量化代价</li>
             <li>拆分“机械性处理”与“审美判断”两个维度</li>
             <li>聚焦最小可演示价值，先做可运行原型</li>
             <li>用真实用户反馈形成下一轮迭代清单</li>
@@ -144,9 +146,9 @@
           <article class="panel">
             <h3>AI 编程心得与收获</h3>
             <ul>
-              <li>先写清目标和输入输出，AI 才能对齐你的意图</li>
-              <li>用“草图式提示词”快速出 MVP，再逐步收敛细节</li>
-              <li>把 AI 当成搭档：让它提问、拆解任务、生成备选方案</li>
+              <li>先写清目标、输入、输出格式，AI 才能对齐意图</li>
+              <li>用“草图式提示词”先做 MVP，再逐步收敛细节</li>
+              <li>把 AI 当成搭档：让它提问、拆解任务、给备选方案</li>
               <li>坚持小步快跑：每次只优化一个关键指标</li>
             </ul>
           </article>
@@ -154,7 +156,7 @@
             <h3>给伙伴的 AI 学习路径</h3>
             <ul>
               <li>第 1 天：用 AI 完成 1 页式作品集或名片</li>
-              <li>第 2 天：围绕一个痛点做 1 个 PRD 文档</li>
+              <li>第 2 天：围绕一个痛点做 1 份 PRD 文档</li>
               <li>第 3 天：做一个可交互原型并收集反馈</li>
               <li>第 4 天：把流程沉淀为模板，提升复用效率</li>
             </ul>
