Integrate all assignments

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="logo">Way2AGI</div>
       <nav class="nav">
         <a href="#pitch">项目路演</a>
+        <a href="#evidence">作业证据</a>
         <a href="#retro">学习复盘</a>
         <a href="#cta">联系</a>
       </nav>
@@ -50,16 +51,16 @@
           </div>
           <div class="stats">
             <div>
-              <span class="num">2-5 场</span>
-              <span class="label">周拍摄频率</span>
+              <span class="num">5 份</span>
+              <span class="label">课程作业</span>
             </div>
             <div>
-              <span class="num">500-1500</span>
-              <span class="label">单场照片规模</span>
+              <span class="num">2 个</span>
+              <span class="label">产品方向</span>
             </div>
             <div>
-              <span class="num">2-3 小时</span>
-              <span class="label">每场可省时间</span>
+              <span class="num">1 个</span>
+              <span class="label">可用原型</span>
             </div>
           </div>
         </div>
@@ -125,6 +126,32 @@
               <li>一键生成并下载证件照</li>
             </ul>
           </article>
+          <article class="card">
+            <div class="card-kicker">作业四 · Skill 构建</div>
+            <h3>“提示词翻译器”解决生图门槛</h3>
+            <p>
+              在做 PPT 配图时，很多职场人脑中有画面，却卡在“如何描述、如何写提示词”上。
+              真问题不是少一个生图工具，而是用户缺少将直觉画面翻译成专业提示词的能力。
+            </p>
+            <ul>
+              <li>用自然语言描述目标画面即可生成专业提示词</li>
+              <li>把 15-60 分钟反复试错，缩短为 5 分钟</li>
+              <li>让“AI 生图”从技能变成可直接使用的服务</li>
+            </ul>
+          </article>
+          <article class="card">
+            <div class="card-kicker">作业六 · 发布上线</div>
+            <h3>把作品发布到公网可访问</h3>
+            <p>
+              目标是掌握 GitHub 建仓库与 Vercel 部署流程，让作品真正可以被访问与分享。
+              从本地到线上，完成发布闭环。
+            </p>
+            <ul>
+              <li>创建 GitHub 仓库并上传代码</li>
+              <li>Vercel 导入仓库一键部署</li>
+              <li>输出公开访问链接作为成果</li>
+            </ul>
+          </article>
         </div>
         <div class="process">
           <h3>从点子到产品的挖掘思路</h3>
@@ -134,6 +161,39 @@
             <li>聚焦最小可演示价值，先做可运行原型</li>
             <li>用真实用户反馈形成下一轮迭代清单</li>
           </ul>
+        </div>
+      </section>
+
+      <section id="evidence" class="section evidence">
+        <div class="section-title">
+          <h2>作业证据</h2>
+          <p>课程作业截图与原型页面留存</p>
+        </div>
+        <div class="media-grid">
+          <figure class="media-card">
+            <img src="image1.png" alt="作业一：痛点挖掘机" loading="lazy" />
+            <figcaption>作业一：痛点挖掘机（3 个高频场景）</figcaption>
+          </figure>
+          <figure class="media-card">
+            <img src="image2.png" alt="作业二：智能摄影选片工具 PRD" loading="lazy" />
+            <figcaption>作业二：智能摄影选片工具 PRD（概述）</figcaption>
+          </figure>
+          <figure class="media-card">
+            <img src="image3.png" alt="作业三：证件照生成 PRD 场景需求" loading="lazy" />
+            <figcaption>作业三：证件照生成（场景需求）</figcaption>
+          </figure>
+          <figure class="media-card">
+            <img src="image3-2.png" alt="作业三：证件照生成原型" loading="lazy" />
+            <figcaption>作业三：证件照生成原型页面</figcaption>
+          </figure>
+          <figure class="media-card">
+            <img src="image5.png" alt="作业四：Skill 构建与提示词翻译" loading="lazy" />
+            <figcaption>作业四：Skill 构建（提示词翻译器）</figcaption>
+          </figure>
+          <figure class="media-card">
+            <img src="image6.png" alt="作业六：部署到 Vercel" loading="lazy" />
+            <figcaption>作业六：GitHub + Vercel 部署流程</figcaption>
+          </figure>
         </div>
       </section>
 
@@ -150,6 +210,7 @@
               <li>用“草图式提示词”先做 MVP，再逐步收敛细节</li>
               <li>把 AI 当成搭档：让它提问、拆解任务、给备选方案</li>
               <li>坚持小步快跑：每次只优化一个关键指标</li>
+              <li>把高频步骤沉淀成 Skill，形成可复用的工作流</li>
             </ul>
           </article>
           <article class="panel">
@@ -159,6 +220,7 @@
               <li>第 2 天：围绕一个痛点做 1 份 PRD 文档</li>
               <li>第 3 天：做一个可交互原型并收集反馈</li>
               <li>第 4 天：把流程沉淀为模板，提升复用效率</li>
+              <li>第 5 天：把作品部署上线，形成可分享链接</li>
             </ul>
           </article>
         </div>
