Update contact info and align pitch titles

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
             <p>如果你也在探索 AI 与产品落地，欢迎一起复盘与共创。</p>
           </div>
           <div class="cta-actions">
-            <p class="contact">邮箱：yourname@example.com</p>
-            <p class="contact">微信：your-wechat-id</p>
+            <p class="contact">邮箱：lgz_zjnb@163.com</p>
+            <p class="contact">微信：darren_nb</p>
           </div>
         </div>
       </section>
